@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mjr] Display localized date strings when grouping galleries by date (Bug #10669).
 * [mjr] Improve gallery property editing when jpg image format is configured.
 * [jan] Add Slovak translation (Martin Matuška &lt;martin@matuska.org&gt;).
 * [mjr] Allow filtering listTagInfo results by user.
@@ -1193,6 +1194,7 @@
    <date>2011-10-19</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mjr] Display localized date strings when grouping galleries by date (Bug #10669).
 * [mjr] Improve gallery property editing when jpg image format is configured.
 * [jan] Add Slovak translation (Martin Matuška &lt;martin@matuska.org&gt;).
 * [mjr] Allow filtering listTagInfo results by user.
