@@ -2,6 +2,8 @@
 v2.0-git
 --------
 
+[mjr] Display localized date strings when grouping galleries by date (Bug
+      #10669).
 [mjr] Improve gallery property editing when jpg image format is configured.
 [jan] Add Slovak translation (Martin Matuška <martin@matuska.org>).
 [mjr] Allow filtering listTagInfo results by user.
